<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.HomeFragment">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp">

            <TextView
                android:id="@+id/tv_home"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/accent"
                android:fontFamily="@font/myfont"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:contentDescription="@string/search_home"
                android:src="@drawable/ic_baseline_search_24"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_would_you_like_to_eat"
            app:layout_constraintStart_toStartOf="@id/header"
            app:layout_constraintTop_toBottomOf="@+id/header"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/myfont"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_question">

            <ImageView
                android:id="@+id/iv_random_meal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/random_meal"
                android:src="@color/accent"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_popular_meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text="@string/over_populate_items"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_question"
            app:layout_constraintTop_toBottomOf="@+id/main_card"
            android:layout_marginTop="@dimen/_10sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_meals"
            android:layout_width="0dp"
            android:layout_height="@dimen/_90sdp"
            app:layout_constraintStart_toStartOf="@id/tv_popular_meals"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_meals"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/rv_popular_meals"
            app:layout_constraintTop_toBottomOf="@+id/rv_popular_meals"
            android:layout_marginTop="@dimen/_10sdp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/categories_card_view"

            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_categories">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>